@@ -1,5 +1,7 @@
 package gherkin.formatter;
 
+import java.io.IOException;
+
 public interface Format {
     String text(String text);
 }
