@@ -1,5 +1,8 @@
 == In Git
 
+=== Changes
+* No more dependencies on external ANSI escape libraries (Ruby:term-ansicolor, Java:Jansi). DIY is better! (Aslak Hellesøy)
+
 == 2.3.2 (2010-12-05)
 
 (Somehow 2.3.1 was released improperly shortly after 2.3.0 - not sure what fixes went into that!)
